chore: Prevent lines from overflowing in line finder

--- a/app/assets/stylesheets/utilities/_overflow.scss
+++ b/app/assets/stylesheets/utilities/_overflow.scss
@@ -1,3 +1,8 @@
 .overflow-hidden {
   overflow: hidden;
 }
+
+.overflow-auto {
+  overflow: auto;
+  @include styled-scrollbar;
+}
